--- a/kudzie.html
+++ b/kudzie.html
@@ -5,4 +5,11 @@ Hello, World
         <hi>Hello, World!</hi>
         </body>
     </html>
-    
+<html>
+    <head>
+    </head>
+    <body>
+        <hi>Hello, World!</hi>
+    </body> 
+</html>
+
