--- a/KQ.html
+++ b/KQ.html
@@ -1,8 +1,8 @@
-I love Zimbabwe
-<h1>I love Zimbabwe</h1>
 <html>
     <body>
-        <hi>I love Zimbabwe</hi>
+        <h1>I love Zimbabwe!<h1>
         </body>
+        </html>
         
+
 
